# 2imv15-Assignment-1

./: .gitmodules  CMakeLists.txt  CircularWireConstraint.cpp  Makefile.orig  Particle.cpp  Particle.h  ParticleToy.cbp  ParticleToy.cpp  RodConstraint.cpp  Solver.cpp  SpringForce.cpp  System.cpp  System.h  SystemBuilder.cpp  SystemBuilder.h  View.cpp  View.h  linearSolver.cpp  linearSolver.h
constraints/: CircularWireConstraint.cpp  CircularWireConstraint.h  Constraint.cpp  Constraint.h  RodConstraint.cpp  RodConstraint.h
forces/: AngularSpringForce.cpp  AngularSpringForce.h  DirectionalForce.cpp  DirectionalForce.h  DragForce.cpp  DragForce.h  Force.cpp  Force.h  SpringForce.cpp  SpringForce.h
solvers/: ConstraintSolver.cpp  Euler.cpp  Euler.h  Midpoint.cpp  Midpoint.h  RungeKutta.cpp  Solver.cpp  Solver.h
